infrastructure/kubernetes/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main-route-https
  namespace: meeting-automation
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik-tls-cert
  routes:
    # Stricter route for Authentication Endpoints
    - match: (Host(`localhost`) || Host(`127.0.0.1`) || Host(`meeting-automate.tn`)) && PathPrefix(`/api/v1/auth`)
      kind: Rule
      services:
        - name: backend
          port: 8000
      middlewares:
        - name: rate-limit-auth

    # General Backend API Route
    - match: (Host(`localhost`) || Host(`127.0.0.1`) || Host(`meeting-automate.tn`)) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          port: 8000
      middlewares:
        - name: rate-limit-general

    - match: (Host(`localhost`) || Host(`127.0.0.1`) || Host(`meeting-automate.tn`)) && PathPrefix(`/onlyoffice`)
      kind: Rule
      services:
        - name: onlyoffice
          port: 80
      middlewares:
        - name: rate-limit-general

    # Frontend Route
    - match: (Host(`localhost`) || Host(`127.0.0.1`) || Host(`meeting-automate.tn`)) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 80
      middlewares:
        - name: rate-limit-general

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http
  namespace: meeting-automation
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) || Host(`127.0.0.1`) || Host(`meeting-automate.tn`)
      kind: Rule
      services:
        - name: frontend # Placeholder, the middleware hijacks the request anyway
          port: 80
      middlewares:
        - name: redirect-to-https
